--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="app">{{ message }}</div>
+    <div id="app">
+      <h1>{{ message }}</h1>
+
+      <img :src="image" alt="" />
+    </div>
     <script src="./js/main.js"></script>
   </body>
 </html>
